Add summary for 2025-07-06

--- a/summaries/2025-07-06-summary.md
+++ b/summaries/2025-07-06-summary.md
@@ -1,3 +1,18 @@
 # Summary for 2025-07-06
 
-Error generating summary: Error code: 401 - {'error': {'message': 'Incorrect API key provided: ask-qrst********************************efgh. You can find your API key at https://platform.openai.com/account/api-keys.', 'type': 'invalid_request_error', 'param': None, 'code': 'invalid_api_key'}}
+**Mock Summary** (Generated without OpenAI API)
+
+This is a placeholder summary of the scraped content.
+
+**Content Statistics:**
+- Word count: 1,162 words
+- Character count: 8,556 characters
+- First 200 characters: P&C Insurance Software & Technology | Guidewire
+Guidewire Logo
+Products
+Products
+Explore all products, including the most trusted P&C insurance software, analytics, digital and the Guidewire Cloud pla...
+
+To get an AI-generated summary, please:
+1. Get a real OpenAI API key from https://platform.openai.com/account/api-keys
+2. Replace the placeholder key in your .env file
